<resources>
    <string name="app_name">TrojanCheckInCheckOut</string>
    <string name="title_activity_student_profile">MainActivity</string>
    <string name="title_checkin">Check In</string>
    <string name="title_checkout">Check Out</string>
    <string name="title_history">History</string>
    <string name="title_buildings">Buildings</string>
    <string name="title_import">Import</string>
    <string name="title_search">Search</string>
    <string name="title_activity_manager_profile">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_managerprofile">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_manager_profile1">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_manager_profile2">MainActivity</string>
    <string name="current">Current</string>
    <string name="capacity">Capacity</string>
    <string name="building_label">Building</string>
    <string name="back_button">back button</string>
    <string name="info_button">info</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_building_info_page">building_info_page</string>
    <string name="checkin_24">checkin_24</string>
    <string name="history">history</string>
    <string name="buildings">buildings</string>
    <string name="imports">imports</string>
    <string name="search">search</string>
    <string name="checkout">Checkout</string>
    <string name="building">Building</string>
    <string name="importString">Import</string>
    <string name="buildingsString">Buildings</string>
    <string name="SortBy">Sort By</string>
    <string name="searchText">Search</string>
    <string name="return_to_profile">Return to Profile</string>
    <string name="profile">Profile</string>
</resources>