<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentProfileActivity"
    android:id="@+id/container">

    <View
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="#9D2235"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studentprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Student Profile"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Welcome back!"
        android:textColor="#000000"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <ImageView
        android:id="@+id/tommy"
        android:layout_width="108dp"
        android:layout_height="118dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="276dp"
        android:src="@drawable/tommytrojan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeback" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Student:"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeback" />

    <TextView
        android:id="@+id/label_for_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/welcomeback" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USC ID:"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <TextView
        android:id="@+id/label_for_usc_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/info1"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Major:"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info1" />

    <TextView
        android:id="@+id/label_for_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/info2"
        app:layout_constraintTop_toBottomOf="@+id/info1" />

    <Button
        android:id="@+id/editPhoto"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_main"
        android:backgroundTint="#FFFFFF"
        android:onClick="editPhoto"
        android:text="Edit Photo"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info2"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/editPassword"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_main"
        android:backgroundTint="#FFFFFF"
        android:onClick="editPassword"
        android:text="Change Password"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhoto"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/signout"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_main"
        android:backgroundTint="#FFFFFF"
        android:onClick="signOut"
        android:text="Sign Out"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/delete"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_main"
        android:backgroundTint="#FFFFFF"
        android:onClick="deleteAlert"
        android:text="Delete Account"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signout"
        app:strokeColor="#FFFFFF" />

    <TextView
        android:id="@+id/curr_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current:"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/curr_loc_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="15dp"
        android:textColor="#000000"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        app:layout_constraintStart_toEndOf="@+id/curr_loc"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/down_banner"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="#9D2235"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/checkin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/checkin_24"
        android:onClick="checkIn"
        android:src="@drawable/checkin_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/checkout"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/checkintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="checkIn"
        android:text="Checkin"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/checkouttext" />

    <ImageView
        android:id="@+id/checkout"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/checkout"
        android:onClick="checkOutPressed"
        android:src="@drawable/ic_baseline_donut_large_24"
        app:layout_constraintRight_toLeftOf="@id/history"
        app:layout_constraintLeft_toRightOf="@id/checkin"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/checkouttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="checkOutPressed"
        android:text="Checkout"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/history_"
        app:layout_constraintLeft_toRightOf="@id/checkintext"
        />

    <ImageView
        android:id="@+id/history"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/history"
        android:onClick="loadStudentHistory"
        android:src="@drawable/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkout"
        app:layout_constraintLeft_toRightOf="@id/checkout"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/history_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="loadStudentHistory"
        android:text="History"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkouttext"
        app:layout_constraintLeft_toRightOf="@id/checkouttext"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>